# MacroSIP

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/app/: MacroSipApp.cpp  MacroSipApp.h  MainWindow.cpp  MainWindow.h
src/dialogs/: AAOptionsDialog.cpp  AAOptionsDialog.h  AccountDialog.cpp  AccountDialog.h  AddContactDialog.cpp  AddContactDialog.h  FeatureCodesDialog.cpp  FeatureCodesDialog.h  MessagesDialog.cpp  MessagesDialog.h  RingingDialog.cpp  RingingDialog.h  SettingsDialog.cpp  SettingsDialog.h  ShortcutsDialog.cpp  ShortcutsDialog.h  TransferDialog.cpp  TransferDialog.h
src/headset/: HeadsetManager.cpp  HeadsetManager.h
src/models/: Account.cpp  Account.h  CallRecord.cpp  CallRecord.h  Contact.cpp  Contact.h  Settings.cpp  Settings.h
src/resources/: resources.qrc
src/security/: forbidden.h
src/sip/: SipAccount.cpp  SipAccount.h  SipCall.cpp  SipCall.h  SipManager.cpp  SipManager.h  SipTypes.h
src/utils/: CallHistoryStore.cpp  CallHistoryStore.h  ContactStore.cpp  ContactStore.h  Crypto.cpp  Crypto.h  CsvFile.cpp  CsvFile.h  LangPack.cpp  LangPack.h
src/widgets/: CallsWidget.cpp  CallsWidget.h  ClosableTabWidget.cpp  ClosableTabWidget.h  ContactsWidget.cpp  ContactsWidget.h  DialerWidget.cpp  DialerWidget.h  LevelsSlider.cpp  LevelsSlider.h
tests/: CMakeLists.txt  test_aaoptionsdialog.cpp  test_account.cpp  test_accountdialog.cpp  test_addcontactdialog.cpp  test_callhistorystore.cpp  test_callrecord.cpp  test_callswidget.cpp  test_closabletabwidget.cpp  test_contact.cpp  test_contactstore.cpp  test_contactswidget.cpp  test_crypto.cpp  test_csvfile.cpp  test_dialer.cpp  test_featurecodesdialog.cpp  test_headsetmanager.cpp  test_langpack.cpp  test_levelsslider.cpp  test_messagesdialog.cpp  test_ringingdialog.cpp  test_settings.cpp  test_settingsdialog.cpp  test_shortcutsdialog.cpp  test_sipaccount.cpp  test_sipcall.cpp  test_sipmanager.cpp  test_transferdialog.cpp
